--- a/src/app/@modules/home/components/quantitativo-dados-clinica/quantitativo-dados-clinica.component.html
+++ b/src/app/@modules/home/components/quantitativo-dados-clinica/quantitativo-dados-clinica.component.html
@@ -1,12 +1,7 @@
-<div class="row m-0">
-  <div class="col-md-6 col-sm-12">
-    <app-card-content
-      cardClass="padd-footer"
-      isCardFooter="true"
-      footerClass="bg-card-thirt"
-      [loadingLine]="loading"
-      progressClass="progress-laranja"
-    >
+<div class="row">
+  <div class="col-md-6 col-12 pt-3 pt-md-0">
+    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-thirt" [loadingLine]="loading"
+      progressClass="progress-laranja">
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
@@ -30,14 +25,9 @@
       </div>
     </app-card-content>
   </div>
-  <div class="col-md-6 col-sm-12">
-    <app-card-content
-      cardClass="padd-footer"
-      isCardFooter="true"
-      footerClass="bg-card-secondary"
-      [loadingLine]="loading"
-      progressClass="progress-verde"
-    >
+  <div class="col-md-6 col-12 pt-3 pt-md-0">
+    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-secondary"
+      [loadingLine]="loading" progressClass="progress-verde">
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
@@ -61,16 +51,9 @@
       </div>
     </app-card-content>
   </div>
-</div>
-<div class="row pt-3 m-0">
-  <div class="col-md-6 col-sm-12">
-    <app-card-content
-      cardClass="padd-footer"
-      isCardFooter="true"
-      footerClass="bg-card-four"
-      [loadingLine]="loading"
-      progressClass="progress-vermelho"
-    >
+  <div class="col-md-6 col-12 pt-3">
+    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-four" [loadingLine]="loading"
+      progressClass="progress-vermelho">
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
@@ -94,14 +77,9 @@
       </div>
     </app-card-content>
   </div>
-  <div class="col-md-6 col-sm-12">
-    <app-card-content
-      cardClass="padd-footer"
-      isCardFooter="true"
-      footerClass="bg-card-primary"
-      [loadingLine]="loading"
-      progressClass="progress-azul"
-    >
+  <div class="col-md-6 col-12 pt-3">
+    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-primary" [loadingLine]="loading"
+      progressClass="progress-azul">
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
