--- a/src/app/@modules/paciente/components/consulta-medica/consulta-medica.component.html
+++ b/src/app/@modules/paciente/components/consulta-medica/consulta-medica.component.html
@@ -10,7 +10,7 @@
         <h2 class="my-1">Especialidade</h2>
         <hr class="my-2" />
       </div>
-      <div class="col-4">
+      <div class="col-md-6 col-sm-12">
         <ng-select
           [items]="listaMedicos"
           bindLabel="nomeCompleto"
@@ -47,7 +47,7 @@
         <h2 class="my-1">Dados do paciente</h2>
         <hr class="my-2" />
       </div>
-      <div class="col-4">
+      <div class="col-md-6 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Nome</mat-label>
           <input type="text" matInput placeholder="Digite seu nome" autocomplete="off" />
@@ -57,7 +57,7 @@
             </mat-error> -->
         </mat-form-field>
       </div>
-      <div class="col-4">
+      <div class="col-md-6 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Sobrenome</mat-label>
           <input type="text" matInput placeholder="Digite seu nome" autocomplete="off" />
@@ -67,7 +67,7 @@
           </mat-error> -->
         </mat-form-field>
       </div>
-      <div class="col-3">
+      <div class="col-md-6 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Sexo</mat-label>
           <mat-select>
@@ -79,7 +79,7 @@
             </mat-error> -->
         </mat-form-field>
       </div>
-      <div class="col-3">
+      <div class="col-md-6 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>CPF</mat-label>
           <input type="text" matInput placeholder="Digite seu nome" autocomplete="off" mask="000.000.000-00" />
@@ -95,7 +95,7 @@
         <h2 class="my-1">Dados da consulta</h2>
         <hr class="my-2" />
       </div>
-      <div class="col-3">
+      <div class="col-md-6 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Tipo de consulta</mat-label>
           <mat-select>
@@ -107,7 +107,7 @@
             </mat-error> -->
         </mat-form-field>
       </div>
-      <div class="col-3">
+      <div class="col-md-6 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Datas disponíveis</mat-label>
           <mat-select>
@@ -119,7 +119,7 @@
             </mat-error> -->
         </mat-form-field>
       </div>
-      <div class="col-3">
+      <div class="col-md-6 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Horários disponíveis</mat-label>
           <mat-select>
@@ -131,7 +131,7 @@
             </mat-error> -->
         </mat-form-field>
       </div>
-      <div class="col-10">
+      <div class="col-12">
         <mat-form-field class="w-100" appearance="outline">
           <mat-label>Sintomas</mat-label>
           <textarea matInput placeholder="Digite os sintomas do paciente aqui..."></textarea>
