--- a/src/app/@modules/paciente/components/prontuario-medico/prontuario-medico.component.html
+++ b/src/app/@modules/paciente/components/prontuario-medico/prontuario-medico.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-prontuario">
+<div class="container bg-prontuario mb-4">
   <app-card-content>
     <!-- Cabeçalho -->
     <div class="row m-0">
@@ -194,5 +194,6 @@
         </form>
       </div>
     </div>
+    <app-form-debug [form]="formProntuario"></app-form-debug>
   </app-card-content>
 </div>
