--- a/src/theme/_form.scss
+++ b/src/theme/_form.scss
@@ -3,7 +3,7 @@
     // background-color: transparent;
     // background-color: #fafafa;
     border-radius: 6px;
-    color: #aaa;
+    // color: #aaa;
     cursor: pointer;
   }
 
@@ -28,11 +28,11 @@
   }
 
   .mat-form-field-label {
-    color: #afb5bd;
+    // color: #afb5bd;
   }
 
   .mat-form-field-appearance-legacy .mat-form-field-underline {
-    background-color: #ced4da;
+    // background-color: #ced4da;
   }
 
   .ng-select .ng-select-container.ng-appearance-outline {
