--- a/src/app/@modules/cadastro/components/colaboradores/cadastro-colaborador/cadastro-colaborador.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/cadastro-colaborador/cadastro-colaborador.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row h-90-auto">
   <div class="col-12 d-flex justify-content-end">
     <i class="feather icon-x-circle" (click)="closeDialog()"></i>
   </div>
