--- a/src/app/@modules/cadastro/components/colaboradores/form-cadastro-colaborador/form-cadastro-colaborador.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/form-cadastro-colaborador/form-cadastro-colaborador.component.html
@@ -218,13 +218,9 @@
       </div>
       <!--/col-md-6-->
     </div>
+    <mat-dialog-actions align="end">
+      <button mat-button mat-dialog-close>cancelar</button>
+      <button mat-button [mat-dialog-close]="true" cdkFocusInitial>salvar</button>
+    </mat-dialog-actions>
   </form>
-  <div class="row d-flex justify-content-end ms-1 mt-4">
-    <div class="col-2 p-0 col-sm-6">
-      <button class="btn btn-secondary-tcc p-2">limpar</button>
-    </div>
-    <div class="col-2 p-0 col-sm-6">
-      <button class="btn btn-primary-tcc p-2">salvar</button>
-    </div>
-  </div>
 </div>
