--- a/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
+++ b/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6 col-sm-12 mt-sm-2 mt-md-0">
+  <div class="col-md-6 col-sm-12 pt-3 pt-md-0">
     <app-card-content
       cardClass="padd-footer"
       isCardFooter="true"
@@ -40,7 +40,7 @@
       </div>
     </app-card-content>
   </div>
-  <div class="col-md-6 col-sm-12 mt-sm-2 mt-md-0">
+  <div class="col-md-6 col-sm-12 pt-3 pt-md-0">
     <app-card-content
       cardClass="padd-footer"
       isCardFooter="true"
