chore(agendamento home): criando fluxo de agendamento pela Home e ajustes

--- a/src/app/@modules/cadastro/components/colaboradores/table-colaboradores/table-colaboradores.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/table-colaboradores/table-colaboradores.component.html
@@ -1,6 +1,6 @@
 <div class="row pt-2 m-0">
   <div class="col-12 table-responsive">
-    <table class="w-100">
+    <table class="w-100 table-tcc">
       <thead class="text-uppercase">
         <tr class="text-left">
           <th scope="col">Nome</th>
