--- a/src/app/@modules/paciente/components/table-medico/table-medico.component.html
+++ b/src/app/@modules/paciente/components/table-medico/table-medico.component.html
@@ -1,6 +1,6 @@
 <div class="row pt-4">
   <div class="col-12 table-responsive">
-    <table class="w-100">
+    <table class="w-100 table-tcc">
       <thead class="text-uppercase">
         <tr>
           <th scope="col">Nome</th>
