--- a/src/theme/_table.scss
+++ b/src/theme/_table.scss
@@ -248,7 +248,7 @@ table > thead > tr > th {
 
 //=== NEW CSS TABLE ===
 
-table {
+table.table-tcc {
   border-spacing: 0 10px;
   width: calc(100% -10px);
   margin: 0 5px;
