--- a/src/app/@modules/paciente/components/table-pacientes/table-pacientes.component.html
+++ b/src/app/@modules/paciente/components/table-pacientes/table-pacientes.component.html
@@ -1,6 +1,6 @@
 <div class="row pt-4">
   <div class="col-12">
-    <table class="table-sm w-100">
+    <table class="w-100 table-tcc">
       <thead class="table-light text-uppercase">
         <tr>
           <th scope="col">Nome</th>
