--- a/src/app/auth/components/update-password/update-password.component.html
+++ b/src/app/auth/components/update-password/update-password.component.html
@@ -5,14 +5,17 @@
         <mat-card>
           <mat-card-content>
             <div class="row card-content m-0 pt-3">
+              <div class="col-12 p-0">
+                <button mat-button type="button" (click)="navigateLogin()"><i class="feather icon-arrow-left me-2"></i>login</button>
+              </div>
               <div class="col-12 text-center">
                 <img src="../../../../assets/logo-svg.svg" alt="Logo" />
               </div>
               <div class="col-12 text-center">
-                <h1>Renove sua senha</h1>
+                <h1>Alterar senha</h1>
               </div>
               <div class="col-12 pb-3">
-                <form action="">
+                <form [formGroup]="form" (ngSubmit)="submitNewPassword()" novalidate>
                   <div class="col-12">
                     <mat-form-field appearance="outline" class="w-100">
                       <mat-label>Nova senha</mat-label>
@@ -22,6 +25,7 @@
                         autocomplete="current-password"
                         placeholder="Digite sua nova senha"
                         required
+                        formControlName="antigoPassword"
                       />
                       <!--formControlName="password"-->
                       <button
@@ -45,6 +49,7 @@
                         autocomplete="current-password"
                         placeholder="Confirme sua senha"
                         required
+                        formControlName="novoPassword"
                       />
                       <!--formControlName="password"-->
                       <button
@@ -60,7 +65,7 @@
                     </mat-form-field>
                   </div>
                   <div class="col-12">
-                    <button class="btn btn-primary-tcc p-2 w-100">salvar</button>
+                    <button class="btn btn-primary-tcc p-2 w-100" type="submit">salvar</button>
                   </div>
                 </form>
               </div>
