--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -67,6 +67,7 @@
             <div class="w-100 d-flex justify-content-center">
               <button class="btn btn-primary-tcc p-2" [disabled]="loginForm.invalid || isLoading">entrar</button>
             </div>
+            <mat-checkbox class="example-margin" formControlName="teste">Check me!</mat-checkbox>
           </div>
         </form>
       </div>
